# polywatch

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml
docker/: docker-compose.yml
docker/.claude/: settings.local.json
files/: 0000-adr-template.md  0001-use-fastapi.md  0002-postgres-for-everything.md  0003-three-component-agent-architecture.md  0004-write-agent-loop-by-hand.md  0005-api-first-playwright-fallback.md  0006-jwt-password-auth.md  0007-free-text-interests.md  0008-swappable-llm-client.md  0009-prompt-caching.md  0010-ruff-and-mypy.md  0011-github-actions.md  0012-claude-code-pr-review.md  0013-gcp-trial-credit.md  0014-spin-up-on-demand.md  0015-minimal-dashboard.md  ARCHITECTURE.md  LEARNING.md  LOG.md  PLAN.md  README.md
src/polywatch/: config.py  logger.py
src/polywatch/api/: main.py
src/polywatch/db/: __init__.py  models.py  session.py
