[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polywatch"
version = "0.1.0"
description = "Autonomous Polymarket research agent"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Data
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # HTTP / scraping
    "httpx>=0.27",
    "playwright>=1.44",
    # LLM
    "anthropic>=0.28",
    # CLI
    "typer>=0.12",
    "rich>=13.7",
    # Observability
    "structlog>=24.2",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    # Auth
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers[postgres]>=4.7",
    "httpx>=0.27",      # TestClient
    "pre-commit>=3.7",
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
    # stubs
    "types-passlib",
    "types-python-jose",
]

[project.scripts]
poly = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/polywatch", "src/cli"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["polywatch", "cli"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

# ---------------------------------------------------------------------------
# bandit
# ---------------------------------------------------------------------------
[tool.bandit]
targets = ["src"]
skips = ["B101"]  # assert in tests is fine
